--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <base target="_blank">
-  <title>Popup</title>
+  <title>Show Jira Epic Title on Timeline</title>
 </head>
 <body style="min-width: 100px">
   <div id="app"></div>
